@@ -1,3 +1,11 @@
+2014-10-20  Andy Estes  <aestes@apple.com>
+
+        Fix the iOS build.
+
+        * WebView/WebFrame.mm:
+        (-[WebFrame getDictationResultRanges:andMetadatas:]):
+        (-[WebFrame dictationResultMetadataForRange:]):
+
 2014-10-19  Chris Dumez  <cdumez@apple.com>
 
         Use is<>() / downcast<>() for all remaining RenderObject subclasses
